# linear_algebra

./: .gitignore  CMakeLists.txt  matrix.c  matrix.h  vector.c  vector.h  vectorio.c
examples/: CMakeLists.txt  test.c
include/: common.h  matrix.h  vector.h  vectorio.h
src/: matrix.c  matrix.h  vector.c  vector.h  vectorio.c
